# py-cqrs-message-bus

./: .flake8  .gitignore  LICENSE  Pipfile  README.md  activate  commands.py  docker-compose.yml  events.py  mypy.ini  pyproject.toml  run-build.sh  run-coverage.sh  run-lint.sh  run-publish.sh  run-test-dev.sh  setup.cfg
cq/: bus.py  commands.py  databases.py  events.py  exceptions.py  transaction.py  transactions.py
cq/bus/: bus.py  commands.py  events.py  messages.py
cq/contrib/django/: __init__.py  databases.py  models.py  unit_of_work.py
cq/contrib/django/backends/postgis/: base.py
cq/contrib/django/backends/postgresql/: base.py
cq/contrib/django/backends/sqlite3/: base.py
cq/unit_of_work/: base.py  nested.py
cq/unit_of_work/utils/: events_collector.py
cq/utils/: tracked_handler.py
lib/: bus.py  commands.py  databases.py  events.py  exceptions.py  messages.py  types.py
lib/contrib/django/: databases.py
lib/events/: bus.py  event.py
mb/: __init__.py  bus.py  commands.py  events.py  exceptions.py  globals.py  injection.py  messages.py
mb/contrib/django/: __init__.py  exceptions.py  middleware.py  models.py  unit_of_work.py
mb/unit_of_work/: __init__.py  base.py  nested.py  uow.py
mb/unit_of_work/utils/: events_collector.py
mb/utils/: tracked_handler.py
src/: events.py
tests/: conftest.py
tests/fixtures/: __init__.py  bus.py  events.py  messages.py
tests/fixtures/scenarios/: __init__.py  create_user.py
tests/integration/django/: __init__.py  base.py  conftest.py  test_django.py
tests/integration/django/testapp/: apps.py  bus.py  commands.py  events.py  models.py  settings.py
tests/lib/bus/: test_bus.py  test_transactions.py
tests/lib/events/: test_event_registration.py
tests/unit/bus/: test_bus.py  test_events_declaration.py
tests/unit/databases/: base.py  test_basic_manager.py  test_simple_manager.py  test_sql_manager.py
tests/unit/events/: test_event_registration.py
tests/unit/injection/: test_injection.py
tests/unit/unit_of_work/: base.py  test_nested.py  uow.py
tests/utils/: tracked_handler.py
use_case/: users.py
