# --------------------------------------
# Project metadata
# --------------------------------------

[project]
version = "0.3b1"
requires-python = ">=3.10"

name = "cqrs-message-bus"
description = "Microframework to apply the CQRS pattern over a message bus"
keywords = ["CQRS", "Message bus", "Events"]

readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICEN[CS]E*"]

authors = [
  { name = "Emilio Arenas Bosch", email = "arenas.emilio@gmail.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",

  "Environment :: Web Environment",
  "Framework :: Django :: 4",
  "Intended Audience :: Developers",

  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/emarbo/py-cqrs-message-bus"
Repository = "https://github.com/emarbo/py-cqrs-message-bus"


# --------------------------------------
# Build
# --------------------------------------

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = [
  "mb"
]

[tool.hatch.build.targets.wheel]
packages = [
  "mb"
]


# --------------------------------------
# Developer tools
# --------------------------------------

[tool.black]

[tool.flake8]
# Flake8 doesn't support pyproject.toml yet (see .flake8 file):
# https://gitlab.com/pycqa/flake8/issues/428
max-line-length = 88

[tool.isort]
line_length = 88
force_single_line = "1"
known_first_party = ["mb", "tests"]
default_section = "THIRDPARTY"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug"
]
