[metadata]
name = cqrs-message-bus
version = 0.1a3
author = Emilio Arenas Bosch
author_email = arenas.emilio@gmail.com
description = Microframework to apply the CQRS pattern over a message bus
url = https://github.com/emarbo/py-cqrs-message-bus
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django :: 4
    Typing :: Typed

[options]
package_dir =
    = .
packages = mb
python_requires = >=3.10

[options.package_data]
# I can't believe this yet
# https://github.com/pypa/setuptools/issues/1806
* = *.py, **/*.py, **/**/*.py, **/**/**/*.py, **/**/**/**/*.py
